# web_panic_report

./: CHANGELOG.md  Cargo.toml  Readme.md
.github/workflows/: ci.yml  web-demo.yml
examples/: .env  custom.rs  custom_html.rs  form.html  index.html  simple.rs
src/: lib.rs
src/default_form/: form.html  mod.rs
tests/: tests.rs
