[package]
name = "web_panic_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"

[dependencies.wasm-bindgen]
version = "0.2.37"

[dependencies.web-sys]
version = "0.3"
features = [
    'HtmlTextAreaElement',
    'CssStyleDeclaration',
    'Document',
    "Window",
    'HtmlElement',
]
