[package]
name = "web_panic_report"
description = "A panic hook which replaces an HTML element with a bug report form."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loopystudios/web_panic_report"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    'Document',
    'CssStyleDeclaration',
    'HtmlElement',
    'HtmlTextAreaElement',
    'HtmlButtonElement',
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[features]
default = ["default-form"]
default-form = []
